# mcparmor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EXECUTION_PLAN.md  LICENSE  PRODUCT.md  README.md  SECURITY.md
.github/PULL_REQUEST_TEMPLATE/: community_profile.md
.github/workflows/: adversarial-tests.yml  ci.yml  community-profiles.yml  deploy-site.yml  homebrew-tap.yml  publish-npm.yml  publish-python.yml  release.yml
Formula/: mcparmor.rb  otomus-mcp-armor.rb
crates/mcparmor-broker/: Cargo.toml
crates/mcparmor-broker/benches/: broker_benchmarks.rs
crates/mcparmor-broker/src/: audit_writer.rs  broker.rs  cli.rs  inspect.rs  lib.rs  main.rs  proxy.rs
crates/mcparmor-broker/src/sandbox/: linux.rs  macos.rs  mod.rs  noop.rs
crates/mcparmor-broker/tests/: integration_test.rs
crates/mcparmor-core/: Cargo.toml
crates/mcparmor-core/benches/: benchmarks.rs
crates/mcparmor-core/src/: audit.rs  errors.rs  lib.rs  manifest.rs  policy.rs  scanner.rs
docs/: contributing-profiles.md  getting-started.md  integrations.md  manifest-spec.md  sbpl-research.md  security-model.md  testkit.md
profiles/community/: README.md  brave-search.armor.json  fetch.armor.json  filesystem.armor.json  git.armor.json  github.armor.json  gmail.armor.json  notion.armor.json  playwright.armor.json  slack.armor.json  sqlite.armor.json
sdks/node/: package-lock.json  package.json  tsconfig.build.json  tsconfig.json
sdks/node/src/: binary.ts  checksums.ts  index.ts  logger.ts  manifest.ts  mock-tool-server.js  pool.ts  process.ts  spawn.ts  testkit.ts
sdks/node/tests/: binary.test.ts  manifest.test.ts  pool.test.ts  process.test.ts  spawn.test.ts  testkit.test.ts
sdks/python/: pyproject.toml
sdks/python/.github/workflows/: publish-python.yml
sdks/python/src/mcparmor/: __init__.py  _binary.py  _checksums.py  _manifest.py  _mock_tool_server.py  _pool.py  _popen.py  _process.py  testkit.py
sdks/python/tests/: test_binary.py  test_manifest.py  test_pool.py  test_popen.py  test_process.py  test_testkit.py
showcases/arqitect/: README.md  tool_manager_patch.py  verify.sh
showcases/arqitect/example-tool/: armor.json  tool.json  tool.py
showcases/claude-cli/: verify.sh
showcases/claude-desktop/: README.md  before.json  verify.sh
showcases/cursor/: README.md  verify.sh
showcases/cursor/global/: after.mcp.json  before.mcp.json
showcases/cursor/project/: after.mcp.json  before.mcp.json
showcases/openclaw/: README.md  skill-runner.js
showcases/openclaw/example-skill/: armor.json  tool.js
showcases/vscode/: README.md  after.mcp.json  before.mcp.json  verify.sh
showcases/windsurf/: README.md  after.json  verify.sh
site/: mdx-components.tsx  next-sitemap.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
site/app/: globals.css  layout.tsx  page.tsx
site/app/docs/: layout.tsx  page.tsx
site/components/docs/: ArmorValidator.tsx  DocsSidebar.tsx
site/components/hero/: ChainAnimation.tsx  HeroAnimation.tsx  HeroSection.tsx  InstallCTA.tsx  ShieldAnimation.tsx
site/components/nav/: Footer.tsx  GitHubStars.tsx  Navbar.tsx
site/components/sections/: AdversarialMatrix.tsx  ArqitectCallout.tsx  ForAuthorsBuilders.tsx  HostSupport.tsx  HowItWorks.tsx  InstallSection.tsx  PlatformCards.tsx  ProblemSection.tsx  ProtectionTable.tsx  RuntimeIndication.tsx  TestEvidence.tsx
site/components/ui/: CodeBlock.tsx  CopyButton.tsx  ScrollReveal.tsx  StaggerGroup.tsx  TabSwitcher.tsx
site/lib/: ab.ts  analytics.ts  animations.css  fonts.ts  tokens.css
site/lib/data/: adversarial-matrix.ts  enforcement-table.ts  hosts.ts  platforms.ts  profiles.ts
site/public/: CNAME  robots.txt
spec/v1.0/: armor.schema.json
spike/sbpl/: README.md  findings.md
spike/sbpl/profiles/: browser.sbpl  network.sbpl  sandboxed.sbpl  strict.sbpl
spike/sbpl/test-tools/: Makefile  test_net_connect.c  test_read_passwd.c  test_spawn_child.c
tests/adversarial/: README.md  go.mod  run_tests.py
tests/adversarial/call_forbidden/: armor.json  tool  tool.go  tool.js  tool.py
tests/adversarial/call_metadata/: armor.json  tool  tool.go
tests/adversarial/leak_secret/: armor.json  tool  tool.go  tool.js  tool.py
tests/adversarial/path_traversal/: tool  tool.go
tests/adversarial/read_passwd/: armor.json  tool  tool.go  tool.js  tool.py
tests/adversarial/spawn_child/: tool  tool.go  tool.js  tool.py
tests/integration/fixtures/: claude_desktop_before.json  cursor_before.json  (+1 more)
(+16 files in other folders)
