[workspace]
members = [
    "crates/mcparmor-broker",
    "crates/mcparmor-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MCP Armor contributors"]
license = "MIT"
repository = "https://github.com/otomus/mcparmor"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
jsonschema = "0.18"
regex = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
