[package]
name = "mcparmor-broker"
description = "MCP Armor broker — stdio proxy with OS sandbox enforcement"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mcparmor"
path = "src/main.rs"

[lib]
name = "mcparmor_broker"
path = "src/lib.rs"

[[bench]]
name = "broker_benchmarks"
harness = false

[dependencies]
mcparmor-core = { path = "../mcparmor-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
jsonschema = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ureq = { version = "2", features = ["json"] }
dirs = "5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
# sandbox-exec is invoked as a subprocess — no extra crate needed

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
