[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcparmor"
version = "0.2.0"
description = "MCP Armor — capability enforcement for MCP tools"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Repository = "https://github.com/otomus/mcparmor"

[tool.hatch.build.targets.wheel]
packages = ["src/mcparmor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov"]
