[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-armor"
version = "0.3.0"
description = "MCP Armor — capability enforcement for MCP tools"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Repository = "https://github.com/otomus/mcparmor"

[tool.hatch.build.targets.wheel]
packages = ["src/mcparmor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov", "pytest-asyncio>=0.23"]
